2019-1/221/users/3061/executions/1687_1105.log
== TEST (2019-04-29 15:39:01) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input("Brasao: ")
c == "Casa: "
e = "Entrada: "
if(b == "lobo"):
	print(e,x)
	print(c,"Stark")
elif(b=="leao"):
	print(e,x)
	print(c,"Lannister")
elif(b=="veado"):
	print(e,x)
	print(c,"Baratheon")
elif(b=="dragao"):
	print(e,x)
	print(c,"Targaryen")
elif(b=="rosa"):
	print(e,x)
	print(c,"Tyrell")
elif(b=="sol"):
	print(e,x)
	print(c,"Martell")
elif(b=="lula"):
	print(e,x)
	print(c,"Greyjoy")
elif(b=="esfolado"):
	print(e,x)
	print(c,"Bolton")
elif(b=="turta"):
	print(e,x)
	print(c,"Tully")
else:
	print(e,x)
	print("Brasao Invalido")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    c == "Casa: "
NameError: name 'c' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:41:48) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input("Brasao: ")
c == "Casa: "
e = "Entrada: "
if(b == "lobo"):
	print(e,x)
	print(c,"Stark")
	c == "Casa: "
	e = "Entrada: "
elif(b=="leao"):
	c == "Casa: "
	e = "Entrada: "
	print(e,x)
	print(c,"Lannister")
elif(b=="veado"):
	c == "Casa: "
	e = "Entrada: "
	print(e,x)
	print(c,"Baratheon")
elif(b=="dragao"):
	c == "Casa: "
	e = "Entrada: "
	print(e,x)
	print(c,"Targaryen")
elif(b=="rosa"):
	c == "Casa: "
	e = "Entrada: "
	print(e,x)
	print(c,"Tyrell")
elif(b=="sol"):
	c == "Casa: "
	e = "Entrada: "
	print(e,x)
	print(c,"Martell")
elif(b=="lula"):
	c == "Casa: "
	e = "Entrada: "
	print(e,x)
	print(c,"Greyjoy")
elif(b=="esfolado"):
	c == "Casa: "
	e = "Entrada: "
	print(e,x)
	print(c,"Bolton")
elif(b=="turta"):
	c == "Casa: "
	e = "Entrada: "
	print(e,x)
	print(c,"Tully")
else:
	c == "Casa: "
	e = "Entrada: "
	print(e,x)
	print("Brasao Invalido")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    c == "Casa: "
NameError: name 'c' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:42:48) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input("Brasao: ")
c == "Casa: "
e == "Entrada: "
if(b == "lobo"):
	print(e,x)
	print(c,"Stark")
	c == "Casa: "
	e == "Entrada: "
elif(b=="leao"):
	c == "Casa: "
	e == "Entrada: "
	print(e,x)
	print(c,"Lannister")
elif(b=="veado"):
	c == "Casa: "
	e == "Entrada: "
	print(e,x)
	print(c,"Baratheon")
elif(b=="dragao"):
	c == "Casa: "
	e == "Entrada: "
	print(e,x)
	print(c,"Targaryen")
elif(b=="rosa"):
	c == "Casa: "
	e == "Entrada: "
	print(e,x)
	print(c,"Tyrell")
elif(b=="sol"):
	c == "Casa: "
	e == "Entrada: "
	print(e,x)
	print(c,"Martell")
elif(b=="lula"):
	c == "Casa: "
	e == "Entrada: "
	print(e,x)
	print(c,"Greyjoy")
elif(b=="esfolado"):
	c == "Casa: "
	e == "Entrada: "
	print(e,x)
	print(c,"Bolton")
elif(b=="turta"):
	c == "Casa: "
	e == "Entrada: "
	print(e,x)
	print(c,"Tully")
else:
	c == "Casa: "
	e == "Entrada: "
	print(e,x)
	print("Brasao Invalido")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    c == "Casa: "
NameError: name 'c' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:43:08) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
x = input("Brasao: ")
if(b == "lobo"):
	print(e,x)
	print(c,"Stark")
	c == "Casa: "
	e == "Entrada: "
elif(b=="leao"):
	c == "Casa: "
	e == "Entrada: "
	print(e,x)
	print(c,"Lannister")
elif(b=="veado"):
	c == "Casa: "
	e == "Entrada: "
	print(e,x)
	print(c,"Baratheon")
elif(b=="dragao"):
	c == "Casa: "
	e == "Entrada: "
	print(e,x)
	print(c,"Targaryen")
elif(b=="rosa"):
	c == "Casa: "
	e == "Entrada: "
	print(e,x)
	print(c,"Tyrell")
elif(b=="sol"):
	c == "Casa: "
	e == "Entrada: "
	print(e,x)
	print(c,"Martell")
elif(b=="lula"):
	c == "Casa: "
	e == "Entrada: "
	print(e,x)
	print(c,"Greyjoy")
elif(b=="esfolado"):
	c == "Casa: "
	e == "Entrada: "
	print(e,x)
	print(c,"Bolton")
elif(b=="turta"):
	c == "Casa: "
	e == "Entrada: "
	print(e,x)
	print(c,"Tully")
else:
	c == "Casa: "
	e == "Entrada: "
	print(e,x)
	print("Brasao Invalido")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    if(b == "lobo"):
NameError: name 'b' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:44:13) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b = input("Brasao: ")
if(b == "lobo"):
	print(e,b)
	print(c,"Stark")
	c == "Casa: "
	e == "Entrada: "
elif(b=="leao"):
	c == "Casa: "
	e == "Entrada: "
	print(e,b)
	print(c,"Lannister")
elif(b=="veado"):
	c == "Casa: "
	e == "Entrada: "
	print(e,b)
	print(c,"Baratheon")
elif(b=="dragao"):
	c == "Casa: "
	e == "Entrada: "
	print(e,b)
	print(c,"Targaryen")
elif(b=="rosa"):
	c == "Casa: "
	e == "Entrada: "
	print(e,b)
	print(c,"Tyrell")
elif(b=="sol"):
	c == "Casa: "
	e == "Entrada: "
	print(e,b)
	print(c,"Martell")
elif(b=="lula"):
	c == "Casa: "
	e == "Entrada: "
	print(e,b)
	print(c,"Greyjoy")
elif(b=="esfolado"):
	c == "Casa: "
	e == "Entrada: "
	print(e,b)
	print(c,"Bolton")
elif(b=="turta"):
	c == "Casa: "
	e == "Entrada: "
	print(e,b)
	print(c,"Tully")
else:
	c == "Casa: "
	e == "Entrada: "
	print(e,b)
	print("Brasao Invalido")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 35, in <module>
    c == "Casa: "
NameError: name 'c' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:47:10) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b = input("Brasao: ")
c == "Casa: "
e == "Entrada: "

if(b == "lobo"):
	print(e,b)
	print(c,"Stark")
	
elif(b=="leao"):
	
	print(e,b)
	print(c,"Lannister")
elif(b=="veado"):
	
	print(e,b)
	print(c,"Baratheon")
elif(b=="dragao"):
	
	print(e,b)
	print(c,"Targaryen")
elif(b=="rosa"):
	
	print(e,b)
	print(c,"Tyrell")
elif(b=="sol"):
	
	print(e,b)
	print(c,"Martell")
elif(b=="lula"):
	
	print(e,b)
	print(c,"Greyjoy")
elif(b=="esfolado"):
	
	print(e,b)
	print(c,"Bolton")
elif(b=="turta"):
	
	print(e,b)
	print(c,"Tully")
else:
	
	print(e,b)
	print("Brasao Invalido")
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 4, in <module>
    c == "Casa: "
NameError: name 'c' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:50:49) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b = input("Brasao: ")

if(b == "lobo"):
	print("Entrada:",b)
	print("Casa:","Stark")
	
elif(b=="leao"):
	
	print("Entrada:",b)
	print("Casa:","Lannister")
elif(b=="veado"):
	
	print("Entrada:",b)
	print("Casa: ","Baratheon")
elif(b=="dragao"):
	
	print("Entrada:",b)
	print("Casa:","Targaryen")
elif(b=="rosa"):
	
	print("Entrada:",b)
	print("Casa:","Tyrell")
elif(b=="sol"):
	print("Entrada:",b)
	print("Casa:","Martell")
elif(b=="lula"):
	print("Entrada:",b)
	print("Casa:","Greyjoy")
elif(b=="esfolado"):
	
	print("Entrada:",b)
	print("Casa:","Bolton")
elif(b=="turta"):
	
	print("Entrada:",b)
	print("Casa:","Tully")
else:
	
	print("Entrada:",b)
	print("Brasao Invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:50:59) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b = input("Brasao: ")

if(b == "lobo"):
	print("Entrada:",b)
	print("Casa:","Stark")
	
elif(b=="leao"):
	
	print("Entrada:",b)
	print("Casa:","Lannister")
elif(b=="veado"):
	
	print("Entrada:",b)
	print("Casa: ","Baratheon")
elif(b=="dragao"):
	
	print("Entrada:",b)
	print("Casa:","Targaryen")
elif(b=="rosa"):
	
	print("Entrada:",b)
	print("Casa:","Tyrell")
elif(b=="sol"):
	print("Entrada:",b)
	print("Casa:","Martell")
elif(b=="lula"):
	print("Entrada:",b)
	print("Casa:","Greyjoy")
elif(b=="esfolado"):
	
	print("Entrada:",b)
	print("Casa:","Bolton")
elif(b=="turta"):
	
	print("Entrada:",b)
	print("Casa:","Tully")
else:
	
	print("Entrada:",b)
	print("Brasao Invalido")
-- EXECUTION TIME:
0.154869
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Brasao Invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-29 15:52:32) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b = input("Brasao: ")
if(b == "lobo"):
	print("Entrada:",b)
	print("Casa:","Stark")
elif(b=="leao"):
	print("Entrada:",b)
	print("Casa:","Lannister")
elif(b=="veado"):
	print("Entrada:",b)
	print("Casa: ","Baratheon")
elif(b=="dragao"):
	print("Entrada:",b)
	print("Casa:","Targaryen")
elif(b=="rosa"):
	print("Entrada:",b)
	print("Casa:","Tyrell")
elif(b=="sol"):
	print("Entrada:",b)
	print("Casa:","Martell")
elif(b=="lula"):
	print("Entrada:",b)
	print("Casa:","Greyjoy")
elif(b=="esfolado"):
	print("Entrada:",b)
	print("Casa:","Bolton")
elif(b=="turta"):
	print("Entrada:",b)
	print("Casa:","Tully")
else:
	print("Entrada:",b)
	print("Brasao Invalido")
-- OUTPUT:
Entrada: lula
Casa: Greyjoy
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-29 15:52:54) 
-- CODE:
# Teste seu código aos poucos. Não teste tudo no final, pois fica mais difícil de identificar erros.
# Ao testar sua solução, não se limite ao caso de exemplo. Teste as diversas possibilidades de saída
b = input("Brasao: ")
if(b == "lobo"):
	print("Entrada:",b)
	print("Casa:","Stark")
elif(b=="leao"):
	print("Entrada:",b)
	print("Casa:","Lannister")
elif(b=="veado"):
	print("Entrada:",b)
	print("Casa: ","Baratheon")
elif(b=="dragao"):
	print("Entrada:",b)
	print("Casa:","Targaryen")
elif(b=="rosa"):
	print("Entrada:",b)
	print("Casa:","Tyrell")
elif(b=="sol"):
	print("Entrada:",b)
	print("Casa:","Martell")
elif(b=="lula"):
	print("Entrada:",b)
	print("Casa:","Greyjoy")
elif(b=="esfolado"):
	print("Entrada:",b)
	print("Casa:","Bolton")
elif(b=="turta"):
	print("Entrada:",b)
	print("Casa:","Tully")
else:
	print("Entrada:",b)
	print("Brasao invalido")
-- EXECUTION TIME:
0.17832
-- TEST CASE 1:
---- input:
lula
---- correct output:
Entrada: lula
Casa: Greyjoy
---- user output:
Entrada: lula
Casa: Greyjoy
-- TEST CASE 2:
---- input:
tambaqui
---- correct output:
Entrada: tambaqui
Brasao invalido
---- user output:
Entrada: tambaqui
Brasao invalido
-- TEST CASE 3:
---- input:
dragao
---- correct output:
Entrada: dragao
Casa: Targaryen
---- user output:
Entrada: dragao
Casa: Targaryen
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
